fix: like and card button alignment

--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -13,12 +13,12 @@
 .card__header {
   position: absolute;
   top: 15px;
-  bottom: 287px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 12px;
   z-index: 1;
 }
 
@@ -31,8 +31,6 @@
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 1);
   color: rgba(0, 0, 0, 0.6);
-  /* position: absolute;
-  top: 15px; */
   padding: 2px 12px;
   height: 24px;
   margin: 0;
@@ -49,9 +47,6 @@
 }
 
 .card__like-button {
-  position: absolute;
-  top: 20px;
-  right: 111px;
   background: transparent;
   border: none;
   cursor: pointer;
